force-app/main/default/objects/Daily_Progress__c/Daily_Progress__c.object-meta.xml
<CustomObject>
    <label>Daily Progress</label>
    <nameField>
        <displayFormat>Progress ID - {0000}</displayFormat>
        <label>Progress ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Daily Progresses</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>