force-app/main/default/objects/Daily_Progress__c/fields/Body_Fat_Percentage__c.field-meta.xml
<CustomField>
    <fullName>Body_Fat_Percentage__c</fullName>
    <label>Body Fat Percentage</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>