force-app/main/default/objects/Daily_Progress__c/fields/Muscle_Mass__c.field-meta.xml
<CustomField>
    <fullName>Muscle_Mass__c</fullName>
    <label>Muscle Mass</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>