force-app/main/default/objects/Daily_Progress__c/fields/Progress_Date__c.field-meta.xml
<CustomField>
    <fullName>Progress_Date__c</fullName>
    <label>Progress Date</label>
    <type>Date</type>
</CustomField>